--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -10,6 +10,7 @@ h5,
 h6,
 p {
   font-weight: inherit;
+  
 }
 a {
   text-decoration: none;
@@ -35,13 +36,15 @@ body{
   font-family: 'Montserrat', sans-serif;
   font-size: 10px;
 }
-
-.container{
+section{
+  padding: 9rem 0;
+}
+/*.container{
     width: 1400px;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-}
+}*/
 .block-shadown{
   box-shadow: 1px 1px 1px 0 #343e5c5e;
 }
@@ -75,4 +78,33 @@ align-items: center;
 border: 1px solid #343e5c;
 border-radius: 50px;
 padding: .5rem 1.09rem;
+}
+.advantages__title {
+ 
+  font-size: 3rem;
+  padding-bottom: 10rem;
+ text-align: center;
+}
+.cards{
+  display: flex;
+  align-items:end;
+}
+.cards__item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.cards__title{
+  padding: 5rem 0 2rem;
+  color: #3b3f6a;
+  font-size: 2.02rem;
+  font-weight: 500;
+  line-height: 2rem;
+}
+.cards__description{
+  font-size: 1.5rem;
+  color: #686c8a;
+  
 }
