--- a/src/assets/css/normalize.css
+++ b/src/assets/css/normalize.css
@@ -1,131 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  font-weight: inherit;
-}
-
-a {
-  text-decoration: none;
-  cursor: pointer;
-  color: inherit;
-}
-
-textarea,
-input {
-  -moz-appearance: none;
-  outline: 0px none transparent;
-  border: none;
-  resize: none;
-}
-
-ul {
-  list-style-type: none;
-}
-
-button {
-  background: transparent;
-  border: none;
-}
-
-body {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 10px;
-}
-
-section {
-  padding: 9rem 0;
-}
-
-/*.container{
-    width: 1400px;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}*/
-
-.block-shadown {
-  box-shadow: 1px 1px 1px 0 #343e5c5e;
-}
-
-.page__header {
-  padding: 3.6rem 0;
-}
-
-.page__header,
-.menu,
-.block-actions,
-.block-cart {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  color: #343e5c;
-  align-items: center;
-}
-
-.menu__item {
-  padding-right: 3rem;
-  font-size: 1.02rem;
-  font-weight: 600;
-}
-
-.block-actions,
-.block-sign-in__button {
-  text-transform: uppercase;
-  font-size: 1.01rem;
-}
-
-.block-cart__text,
-.block-cart__count {
-  padding-left: 1.08rem;
-}
-
-.block-sign-in__button {
-  margin-left: 2.09rem;
-  border: 1px solid #343e5c;
-  border-radius: 50px;
-  padding: .5rem 1.09rem;
-}
-
-.advantages__title {
-  font-size: 3rem;
-  padding-bottom: 10rem;
-  text-align: center;
-}
-
-.cards {
-  display: flex;
-  align-items: end;
-}
-
-.cards__item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.cards__title {
-  padding: 5rem 0 2rem;
-  color: #3b3f6a;
-  font-size: 2.02rem;
-  font-weight: 500;
-  line-height: 2rem;
-}
-
-.cards__description {
-  font-size: 1.5rem;
-  color: #686c8a;
-}
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -137,10 +9,8 @@ section {
  */
 
 html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -181,12 +51,9 @@ h1 {
  */
 
 hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
 }
 
 /**
@@ -195,10 +62,8 @@ hr {
  */
 
 pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
@@ -218,12 +83,9 @@ a {
  */
 
 abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  text-decoration: underline dotted;
-  /* 2 */
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -243,10 +105,8 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
@@ -302,14 +162,10 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
@@ -384,18 +240,12 @@ fieldset {
  */
 
 legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
@@ -421,10 +271,8 @@ textarea {
 
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
@@ -442,10 +290,8 @@ textarea {
  */
 
 [type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
@@ -462,10 +308,8 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /* Interactive
